fix: improved select component behavior on mobile

--- a/web-app/style.css
+++ b/web-app/style.css
@@ -161,6 +161,9 @@ label {
   transition: background 0.2s;
   font-size: 0.9375rem;
   color: var(--psycho-text);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
 .option:hover,
